infrastructure/base/networking/traefik/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
