infrastructure/base/networking/traefik/ingress-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.sarma.love`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: sarma-wildcard-tls
    domains:
      - main: traefik.sarma.love
