infrastructure/base/networking/traefik/ingressroute-headplane.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headplane-local
  namespace: headscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headplane.sarma.xyz`)
      kind: Rule
      services:
        - name: headplane
          port: 3000
  tls:
    secretName: headplane-tls
