infrastructure/base/networking/traefik/ingressroute-pihole.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-local
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.sarma.xyz`)
      kind: Rule
      services:
        - name: pihole-pihole-web
          port: 80
  tls:
    secretName: pihole-tls
